[package]
name = "ariadne"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
actix-cors = "0.6.1"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

url = "2.2.2"

thiserror = "1.0"

sqlx = { version = "0.5.11", features = ["runtime-actix-rustls", "postgres", "time", "offline", "macros", "migrate"] }

dotenv = "0.15.0"

log = "0.4.16"
env_logger = "0.9.0"

futures = "0.3.21"
tokio = "1.19.2"
tokio-stream = "0.1.9"
dashmap = "5.3.4"

sha2 = "0.10.2"

reqwest = { version = "0.11", features = ["json"] }