[package]
name = "ariadne"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
actix-cors = "0.6.1"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version  = "0.4.19", features = ["serde"] }
clickhouse = { version = "0.11.2", features = ["uuid", "time"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "serde"] }
url = "2.2.2"

maxminddb = "0.23.0"
flate2 = "1.0.25"
tar = "0.4.38"

thiserror = "1.0"

dotenvy = "0.15.6"
log = "0.4.16"
env_logger = "0.10.0"

futures = "0.3.21"
tokio = "1.19.2"
tokio-stream = "0.1.9"
dashmap = "5.3.4"

reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"